<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:minHeight="0dp"
    tools:context=".view.DetailView">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/layout_bg"
        android:contentDescription="@string/placeholder_contentdescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background">

    </ImageView>

    <TextView
        android:id="@+id/name"
        android:layout_width="252dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/changa"
        android:text="@string/placeholder_username"
        android:textColor="@color/textPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/placeholder_username" />

    <TextView
        android:id="@+id/username"
        android:layout_width="253dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/username"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Button
        android:id="@+id/view_profile"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:height="30dp"
        android:background="@drawable/button_bg"
        android:text="@string/view_profile_button"
        android:textColor="@color/textPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.286"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:id="@+id/bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/title"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/view_profile" />

    <View
        android:id="@+id/view"
        android:layout_width="1dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@color/textPrimary"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/bio" />

    <TextView
        android:id="@+id/followers"
        android:layout_width="60dp"
        android:layout_height="26dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/changa"
        android:text="@string/no_of_followers"
        android:textAlignment="center"
        android:textColor="@color/textPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bio" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="60dp"
        android:layout_height="18dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/followers_text"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/followers" />

    <TextView
        android:id="@+id/repos"
        android:layout_width="60dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/changa"
        android:text="@string/no_of_starred_repo"
        android:textAlignment="center"
        android:textColor="@color/textPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/bio" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="60dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/starred"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/repos" />

    <View
        android:id="@+id/view2"
        android:layout_width="1dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@color/textPrimary"
        app:layout_constraintStart_toEndOf="@+id/repos"
        app:layout_constraintTop_toBottomOf="@+id/bio" />

    <TextView
        android:id="@+id/following"
        android:layout_width="60dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/changa"
        android:text="@string/no_of_following"
        android:textAlignment="center"
        android:textColor="@color/textPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/bio" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/roboto"
        android:text="@string/following"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/following" />

    <Button
        android:id="@+id/view_repos_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="72dp"
        android:background="@drawable/layout_bg"
        android:elevation="24dp"
        android:fontFamily="@font/changa"
        android:text="@string/view_repo"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto"
        android:text="@string/repository"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_repos_btn" />

    <include
        layout="@layout/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"></include>

</android.support.constraint.ConstraintLayout>
</ScrollView>