<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_card"
    android:layout_width="wrap_content"
    android:layout_height="200dp"
    android:layout_margin="10dp"
    app:layout_constraintCircleRadius="8dp"
    app:cardBackgroundColor="@color/colorSecondary">

    <!-- Card contents. -->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/card_profile_image"
            android:layout_width="182dp"
            android:layout_height="131dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/name"
            android:layout_width="163dp"
            android:layout_height="29dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/card_profile_image"
            android:fontFamily="@font/changa"
            android:text="@string/placeholder_username"
            android:textAllCaps="true"
            android:textColor="#CECFD0"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_profile_image" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_below="@+id/name"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/profile_image"
            android:fontFamily="@font/roboto"
            android:text="@string/placeholder_role"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>